Shop: nowrap on TDs with spaces (fixes width)

--- a/resources/assets/sass/components/_table.scss
+++ b/resources/assets/sass/components/_table.scss
@@ -9,6 +9,10 @@
 
 }
 
+.nowrap {
+    white-space: nowrap;
+}
+
 .active-interval {
     color: #050;
     text-shadow: 2px 2px 8px #21ba45;
